--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-SERVER_PORT=
-DATABASE_URL=
-ACCESS_TOKEN_SECRET=
+SERVER_PORT=3000
+DATABASE_URL="mysql://root:aaaa1234@express-database.cr46syu448i0.ap-northeast-2.rds.amazonaws.com:3306/sparta_node"
+ACCESS_TOKEN_SECRET="key_value"
